AC_PREREQ(2.53)
AC_INIT(liblouis, 1.3.52)
AC_CONFIG_SRCDIR(liblouis.pc.in)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_CONFIG_HEADER(liblouis/louiscfg.h)

dnl This is for stuff that absolutely must end up in pyconfig.h.
dnl Please use pyport.h instead, if possible.
AH_TOP([
#ifndef LOUISCFG_H
#define LOUISCFG_H
])
AH_BOTTOM([
#endif /*LOUISCFG_H*/
])

AM_MAINTAINER_MODE
AC_PROG_MAKE_SET

dnl libtool versioning for libwnck

dnl increment if the interface has additions, changes, removals.
LIBLOUIS_CURRENT=1

dnl increment any time the source changes; set to
dnl  0 if you increment CURRENT
LIBLOUIS_REVISION=0

dnl increment if any interfaces have been added; set to 0
dnl  if any interfaces have been changed or removed. removal has
dnl  precedence over adding, so set to 0 if both happened.
LIBLOUIS_AGE=0

AC_SUBST(LIBLOUIS_CURRENT)
AC_SUBST(LIBLOUIS_REVISION)
AC_SUBST(LIBLOUIS_AGE)

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AC_PATH_PROG(PKG_CONFIG, pkg-config)

AC_ARG_ENABLE(ucs4,
              AC_HELP_STRING(--enable-ucs4, Enable 4 byte-wide characters.),
              [],
              [enable_ucs4=no])

AH_TEMPLATE(WIDECHAR_SIZE,
  [Define as the size of the unicode type.])

case "$enable_ucs4" in
no) unicode_size="2"
      AC_DEFINE(WIDECHAR_SIZE,2)
      ;;
yes) unicode_size="4"
      AC_DEFINE(WIDECHAR_SIZE,4)
      ;;
esac

AC_OUTPUT([
Makefile
liblouis/Makefile
tools/Makefile
tables/Makefile
liblouis.pc
])
